--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Portfolio</title>
 </head>
 <body>
-    Hi! Its Suyash
+    Hi! Its Suyash 
+    This is just a demo website made from my own code.
 </body>
 </html>
