--- a/index.html
+++ b/index.html
@@ -7,9 +7,58 @@
     <title>My Portfolio</title>
 </head>
 <body>
-    Hi! Its Suyash 
-    This is just a demo website made from my own code.
-    Trying to push a new line of code. 
+    <h1>Welcome to my Component Library.</h1>
+    <p>Im making a website to showcase my projects made with the help of CSS, HTML, JAVA, NODE.js, etc
+    </p>
+    <hr>
+
+    <h2> @Typography</h2>
+
+    <h1>This is the biggest heading</h1>
+    <h2>This is the second biggest heading</h2>
+    <p>This is the normal text</p>
+    <small>This is relatively smaller text</small>
+    <hr>
+    <h2> Container</h2>
+    <h3>Fluid Container</h3>
+    <div>This is a fluid container and will go till the end of the page</div>
+    <h3>Center Container</h3>
+    <div>This Fluid Container will be centered</div>
+    <hr>
+    <h2> @Links</h2>
+    <a href="/">Primary Link</a>
+    <a href="/">Secondary Link</a> 
+    <hr>
+    <h2>@Lists</h2>
+    <h3>Unordered List</h3>
+
+    <ul>
+        <li>Item One</li>
+        <li>Item Two</li>
+        <li>Item Three</li>
+        </ul>
+    <h3> Unordered Inline List</h3>    
+    <ul>
+        <li>Inline Item One</li>
+        <li>Inline Item Two</li>
+        <li>Inline Item Three</li>
+    </ul>
+    <h3>Ordered List</h3>
+    <ol>
+        <li>Milk</li>
+        <li>Eggs</li>
+        <li>Bread</li>
+    </ol>
+
+
+
+
+
+
+
+
+    <div style="height: 30vh;"></div>
+
 
 </body>
 </html>
