--- a/index.html
+++ b/index.html
@@ -48,17 +48,46 @@
         <li>Milk</li>
         <li>Eggs</li>
         <li>Bread</li>
+        <hr>
+
     </ol>
-
-
-
-
-
-
-
-
-    <div style="height: 30vh;"></div>
-
+     <h3>@nav</h3>
+     <nav>
+      <div>iAmBrand</div>
+    <ol>
+    <li>
+        <a href="/">Home</a>
+    </li>
+    <li>
+        <a href="/">Projects</a>
+    </li>
+    <li>
+     <a href="/">About</a>
+    </li>
+    </ol>
+    </nav>
+    <hr>
+    <h2>@Header</h2>
+    <header>
+    <img src="images/header-image.svg" />
+    <h1>heading inside header</h1>
+    </header>
+    <hr>
+     <h2>@sections</h2>
+     <h3>White Section</h3>
+     <p>This will have a white background</p>
+     <h3>Off-White Section</h3>
+     <p>This will have a Gray background</p>
+     <hr>
+     <h2>@footer</h2>
+     <footer>
+     <div>This will have some text inside the footer</div>
+     <ul>
+     <li>SocialOne</li>
+     <li>SocialTwo</li>
+     <li>SocialThree</li>
+     </ul>
+    </footer>
 
 </body>
 </html>
