--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+
+    <link href="styles.css" rel="stylesheet" />
+
 </head>
 <body>
-    <h1>Welcome to my Component Library.</h1>
+    <h1 id="lib-header">Welcome to my Component Library.</h1>
     <p>Im making a website to showcase my projects made with the help of CSS, HTML, JAVA, NODE.js, etc
     </p>
     <hr>
@@ -16,35 +19,38 @@
 
     <h1>This is the biggest heading</h1>
     <h2>This is the second biggest heading</h2>
+    <p>This paragraph will have a <strong>BOLD</strong> text</p>
     <p>This is the normal text</p>
     <small>This is relatively smaller text</small>
     <hr>
     <h2> Container</h2>
     <h3>Fluid Container</h3>
-    <div>This is a fluid container and will go till the end of the page</div>
+    <div class="fluid-container">This is a fluid container and will go till the end of the page</div>
     <h3>Center Container</h3>
-    <div>This Fluid Container will be centered</div>
+    <div class="center-container">This Fluid Container will be centered</div>
     <hr>
     <h2> @Links</h2>
-    <a href="/">Primary Link</a>
-    <a href="/">Secondary Link</a> 
+    <a class="link primary-link"href="/">Primary Link</a>
+    <a class="link secondary-link"href="/">Secondary Link</a> 
     <hr>
     <h2>@Lists</h2>
     <h3>Unordered List</h3>
+    <p>This list will not have bullet points
 
-    <ul>
+    <ul class="non-bullet">
         <li>Item One</li>
         <li>Item Two</li>
         <li>Item Three</li>
         </ul>
     <h3> Unordered Inline List</h3>    
-    <ul>
-        <li>Inline Item One</li>
-        <li>Inline Item Two</li>
-        <li>Inline Item Three</li>
+    <ul class="non-bullet">
+
+        <li class="list-inline">Inline Item One</li>
+        <li class="list-inline">Inline Item Two</li>
+        <li class="list-inline">Inline Item Three</li>
     </ul>
     <h3>Ordered List</h3>
-    <ol>
+    <ol reversed>
         <li>Milk</li>
         <li>Eggs</li>
         <li>Bread</li>
@@ -52,40 +58,44 @@
 
     </ol>
      <h3>@nav</h3>
-     <nav>
-      <div>iAmBrand</div>
-    <ol>
-    <li>
-        <a href="/">Home</a>
+     <nav class="navigation">
+      <div class="nav-brand">IAmBrand</div>
+    <ul class="nav-pills">
+    <li class="list-inline">
+        <a class="link active-link" href="/">Home</a>
     </li>
-    <li>
-        <a href="/">Projects</a>
+    <li class="list-inline">
+        <a class="link" href="/">Projects</a>
     </li>
-    <li>
-     <a href="/">About</a>
+    <li class="list-inline">
+     <a class="link" href="/">About</a>
     </li>
-    </ol>
+    </ul>
     </nav>
     <hr>
     <h2>@Header</h2>
-    <header>
-    <img src="images/header-image.svg" />
-    <h1>heading inside header</h1>
+    <header class="hero">
+    <img class="hero-img" src="images/header-image.svg" />
+    <h1 class="hero-heading">heading inside header</h1>
     </header>
     <hr>
+    <section class="section">
      <h2>@sections</h2>
      <h3>White Section</h3>
-     <p>This will have a white background</p>
+     <p class="section-left">This will have a white background</p>
+    </section>
+    <section class="ow">
      <h3>Off-White Section</h3>
-     <p>This will have a Gray background</p>
+     <p class="section-left">This will have a Gray background</p>
+    </section>
      <hr>
      <h2>@footer</h2>
-     <footer>
+     <footer class="footer">
      <div>This will have some text inside the footer</div>
      <ul>
-     <li>SocialOne</li>
-     <li>SocialTwo</li>
-     <li>SocialThree</li>
+     <li><a class="link" href="/">SocialOne</a></li>
+     <li><a class="link" href="/">SocialTwo</a></li>
+     <li><a class="link" href="/">SocialThree</a></li>
      </ul>
     </footer>
 
