--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
      <h2>@footer</h2>
      <footer class="footer">
      <div>This will have some text inside the footer</div>
-     <ul>
-     <li><a class="link" href="/">SocialOne</a></li>
-     <li><a class="link" href="/">SocialTwo</a></li>
-     <li><a class="link" href="/">SocialThree</a></li>
+     <ul class="socials non-bullet">
+     <li class="list-inline"><a class="link" href="/">SocialOne</a></li>
+     <li class="list-inline"><a class="link" href="/">SocialTwo</a></li>
+     <li class="list-inline"><a class="link" href="/">SocialThree</a></li>
      </ul>
     </footer>
 
