--- a/index.html
+++ b/index.html
@@ -4,100 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
-
+    <title>PortFolio WebSite</title>
     <link href="styles.css" rel="stylesheet" />
-
 </head>
 <body>
-    <h1 id="lib-header">Welcome to my Component Library.</h1>
-    <p>Im making a website to showcase my projects made with the help of CSS, HTML, JAVA, NODE.js, etc
-    </p>
-    <hr>
-
-    <h2> @Typography</h2>
-
-    <h1>This is the biggest heading</h1>
-    <h2>This is the second biggest heading</h2>
-    <p>This paragraph will have a <strong>BOLD</strong> text</p>
-    <p>This is the normal text</p>
-    <small>This is relatively smaller text</small>
-    <hr>
-    <h2> Container</h2>
-    <h3>Fluid Container</h3>
-    <div class="fluid-container">This is a fluid container and will go till the end of the page</div>
-    <h3>Center Container</h3>
-    <div class="center-container">This Fluid Container will be centered</div>
-    <hr>
-    <h2> @Links</h2>
-    <a class="link primary-link"href="/">Primary Link</a>
-    <a class="link secondary-link"href="/">Secondary Link</a> 
-    <hr>
-    <h2>@Lists</h2>
-    <h3>Unordered List</h3>
-    <p>This list will not have bullet points
-
-    <ul class="non-bullet">
-        <li>Item One</li>
-        <li>Item Two</li>
-        <li>Item Three</li>
-        </ul>
-    <h3> Unordered Inline List</h3>    
-    <ul class="non-bullet">
-
-        <li class="list-inline">Inline Item One</li>
-        <li class="list-inline">Inline Item Two</li>
-        <li class="list-inline">Inline Item Three</li>
-    </ul>
-    <h3>Ordered List</h3>
-    <ol reversed>
-        <li>Milk</li>
-        <li>Eggs</li>
-        <li>Bread</li>
-        <hr>
-
-    </ol>
-     <h3>@nav</h3>
      <nav class="navigation">
-      <div class="nav-brand">IAmBrand</div>
+      <div class="nav-brand">Suyash Nayan</div>
     <ul class="nav-pills">
     <li class="list-inline">
         <a class="link active-link" href="/">Home</a>
     </li>
     <li class="list-inline">
-        <a class="link" href="/">Projects</a>
+        <a class="link" href="/projects.html">Projects</a>
     </li>
     <li class="list-inline">
-     <a class="link" href="/">About</a>
+     <a class="link" href="/blogs.html">Blogs</a>
+
     </li>
     </ul>
     </nav>
-    <hr>
-    <h2>@Header</h2>
+
     <header class="hero">
-    <img class="hero-img" src="images/header-image.svg" />
-    <h1 class="hero-heading">heading inside header</h1>
-    </header>
-    <hr>
+        <img class="hero-img" src="images/header-image.svg" />
+        <h1 class="hero-heading">Some of my Work</h1>
+        </header>
+        <section class="ow">
+     <h3>Technologies</h3>
+     <p class="section-left">I am familiar with HTML5, CSS3, Git, JavaScrip, NodeJS, ReactJS and Web Hosting</p>
+    </section>
+
     <section class="section">
-     <h2>@sections</h2>
-     <h3>White Section</h3>
-     <p class="section-left">This will have a white background</p>
+        <h3>Projects</h3>
+        <p class="section-left">Here are some of my projects made with the technologies im familiar with and have been hosted online by me</p>
+        <a class="link primary-link"href="/projects.html">Browse Projects</a>
     </section>
+
     <section class="ow">
-     <h3>Off-White Section</h3>
-     <p class="section-left">This will have a Gray background</p>
+        <h3>Blogs</h3>
+        <p class="section-left">My love for Reading goes hand in hand with my love for Writing, you can take a look at some of my blogs below</p>
+        <a class="link secondary-link"href="/blogs.html">View Blogs</a>
     </section>
-     <hr>
-     <h2>@footer</h2>
+    
+    
      <footer class="footer">
-     <div>This will have some text inside the footer</div>
+     <div>Connect With Me</div>
      <ul class="socials non-bullet">
-     <li class="list-inline"><a class="link" href="/">SocialOne</a></li>
-     <li class="list-inline"><a class="link" href="/">SocialTwo</a></li>
-     <li class="list-inline"><a class="link" href="/">SocialThree</a></li>
+     <li class="list-inline"><a class="link" href="/">GitHub</a></li>
+     <li class="list-inline"><a class="link" href="/">Twitter</a></li>
+     <li class="list-inline"><a class="link" href="/">LinkedIn</a></li>
+     <li class="list-inline"><a class="link" href="/">Instagram</a></li>
      </ul>
-    </footer>
+    </footer
+
+
+
 
 </body>
 </html>
