--- a/projects.html
+++ b/projects.html
@@ -28,12 +28,15 @@
         <h1 class="hero-heading">My Projects</h1>
         </header>
 
-        <h3>Project List</h3>
+        <h3>Projects</h3>
+        <hr>
     <ol class="non-bullet"reversed>
-        <li>Project 1</li>
+        <li><h3>1. How Well Do You Know Me?</li></h3>
         <section class="section">
-            <h3>Brief Description</h3>
+            <h3>A CLI app built with <strong>NodeJS</strong>. You can send this to your friends and find out who really knows you the best.</h3>
+            <a class="link primary-link" href="https://replit.com/@7suyash7/BEGINNER-2#index.js">Play Game</a>
            </section>
+           <hr>
         <li>Project 2</li>
         <section class="ow">
             <h3>Brief Description</h3>
