--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <header class="hero">
         <img class="hero-img" src="images/header-image.svg" />
-        <h1 class="hero-heading">Some of my Work</h1>
+        <h1 class="hero-heading">About Me and My Work</h1>
         </header>
         <section class="ow">
      <h3>Technologies</h3>
