updated and touchedup

--- a/blogs.html
+++ b/blogs.html
@@ -51,6 +51,31 @@
 
 
 
+        <footer class="footer">
+            <div>Connect With Me</div>
+            <ul class="socials non-bullet">
+                <li class="list-inline"><a class="link" href="/"><img alt="GitHub" src="images/GitHub.svg"
+                    width="100" height="50" >
+                </a></li>
+            <li class="list-inline"><a class="link" href="/"><img alt="Twitter" src="images/twitter.svg"
+                width="100" height="50" >
+            </a></li>
+            <li class="list-inline"><a class="link" href="/"><img alt="LinkedIn" src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Logo.svg.original.svg"
+                width="100" height="50">
+            </a></li>
+            <li class="list-inline"><a class="link" href="/"><img alt="Instagram" src="images/instagram.svg"
+                width="100" height="50" >
+            </a></li>
+            </ul>
+           </footer>
+
+
+
+
+
+
+
+
     Will be updated soon!
     
 </body>
