--- a/projects.html
+++ b/projects.html
@@ -35,17 +35,58 @@
         <section class="section">
             <h3>A CLI app built with <strong>NodeJS</strong>. You can send this to your friends and find out who really knows you the best.</h3>
             <a class="link primary-link" href="https://replit.com/@7suyash7/BEGINNER-2#index.js">Play Game</a>
-           </section>
+            <a class="link secondary-link" href="https://replit.com/@7suyash7/BEGINNER-2#index.js">View Source Code</a>
+        </section>
            <hr>
-        <li>Project 2</li>
+           <ol class="non-bullet">
+        <li><h3>2. BigBang Theory Trivia Quiz</li></ol></body></h3>
         <section class="ow">
-            <h3>Brief Description</h3>
-           </section>
-        <li>Project 3
+            <h3>Another CLI built with NojeJS. Send this to your friends and test their knowledge about the popular TV show The BigBang Theory</h3>
+            <a class="link primary-link" href="https://replit.com/@7suyash7/BigBangTheoryTVshow-quiz#index.js">Play Game</a>
+            <a class="link secondary-link" href="https://replit.com/@7suyash7/BigBangTheoryTVshow-quiz#index.js">View Source Code</a>
+        </section>
+        <ol class="non-bullet">
+        <li><h3>3.Banana Translate Game</h3>
             <section class="section">
-                <h3>Brief Description</h3>
-               </section>
+                <h3>A Fun Translator app which translates English to Banana language made with the help of VanillaJS and an API.</h3>
+            <a class="link primary-link" href="https://bananagang-translate.netlify.app/">Play Game</a>   
+            <a class="link secondary-link" href="https://github.com/7suyash7/banana-translate-game/tree/main">View Source Code</a>
+            <hr>
+            </section>
+        <section>
+        <ol class="non-bullet">
+        <li><h3>4.StarWars Translate Game</h3>
+            <section class="ow">
+                <h3>A Fun Translator app which translates English to Vulcan language made with the help of VanillaJS and an API.</h3>
+            <a class="link primary-link" href="https://starwars-translate-game.netlify.app/">Play Game</a>   
+            <a class="link secondary-link" href="https://github.com/7suyash7/StarWars-Translate-Game/tree/main">View Source Code</a>
+            <hr>
+            </section>
         </li>
+
+
+
+
+
+
+
+        <footer class="footer">
+            <div>Connect With Me</div>
+            <ul class="socials non-bullet">
+                <li class="list-inline"><a class="link" href="/"><img alt="GitHub" src="images/GitHub.svg"
+                    width="100" height="50" >
+                </a></li>
+            <li class="list-inline"><a class="link" href="/"><img alt="Twitter" src="images/twitter.svg"
+                width="100" height="50" >
+            </a></li>
+            <li class="list-inline"><a class="link" href="/"><img alt="LinkedIn" src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Logo.svg.original.svg"
+                width="100" height="50">
+            </a></li>
+            <li class="list-inline"><a class="link" href="/"><img alt="Instagram" src="images/instagram.svg"
+                width="100" height="50" >
+            </a></li>
+            </ul>
+           </footer>
 
 
 
