--- a/blogs.html
+++ b/blogs.html
@@ -7,7 +7,7 @@
     <title>Blogs</title>
     <link href="styles.css" rel="stylesheet" />
 </head>
-<body>
+<body style="background-color: black;">
     <nav class="navigation">
         <div class="nav-brand">Suyash Nayan</div>
       <ul class="nav-pills">
@@ -30,19 +30,23 @@
         <h1 class="hero-heading">My Blogs</h1>
         </header>
     <ol class="non-bullet"reversed>
-        <li>Blog 1</li>
+        <li style="color: gray">Blog 1</li>
         <section class="ow">
-        <a class="link" href="/">View Blog</a>
+            <p>A small text about your blog</p>
+        <a class="link" href="/">Read More</a>
            </section>
-        <li>Blog 2</li>
+        <li style="color: gray;">Blog 2</li>
         <section class="ow">
-        <a class="link" href="/">View Blog</a>
+            <p>A small text about your blog</p>
+        <a class="link" href="/">Read More</a>
            </section>
-        <li>Blog 3
+        <li style="color: gray;">Blog 3</li>
             <section class="ow">
-            <a class="link" href="/">View Blog</a>
+                <p>A small text about your blog</p>
+                <a class="link" href="/">Read More</a>
                </section>
         </li>
+        <hr>
 
 
 
@@ -54,19 +58,20 @@
         <footer class="footer">
             <div>Connect With Me</div>
             <ul class="socials non-bullet">
-                <li class="list-inline"><a class="link" href="/"><img alt="GitHub" src="images/GitHub.svg"
+                <li class="list-inline"><a class="link" href="https://github.com/7suyash7"><img alt="GitHub" src="images/GitHub.svg"
                     width="100" height="50" >
                 </a></li>
-            <li class="list-inline"><a class="link" href="/"><img alt="Twitter" src="images/twitter.svg"
+            <li class="list-inline"><a class="link" href="https://twitter.com/suyyyashh"><img alt="Twitter" src="images/twitter.svg"
                 width="100" height="50" >
             </a></li>
             <li class="list-inline"><a class="link" href="/"><img alt="LinkedIn" src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Logo.svg.original.svg"
                 width="100" height="50">
             </a></li>
-            <li class="list-inline"><a class="link" href="/"><img alt="Instagram" src="images/instagram.svg"
+            <li class="list-inline"><a class="link" href="https://www.instagram.com/7suyash7"><img alt="Instagram" src="images/instagram.svg"
                 width="100" height="50" >
             </a></li>
             </ul>
+            
            </footer>
 
 
