--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>PortFolio WebSite</title>
     <link href="styles.css" rel="stylesheet" />
 </head>
-<body>
+<body style="background-color: black;">
      <nav class="navigation">
       <div class="nav-brand">Suyash Nayan</div>
     <ul class="nav-pills">
@@ -32,8 +32,8 @@
      <h3>Technologies</h3>
      <p class="section-left">I am familiar with HTML5, CSS3, Git, JavaScrip, NodeJS, ReactJS and Web Hosting</p>
     </section>
-
-    <section class="section">
+<hr>
+    <section class="ow">
         <h3>Projects</h3>
         <p class="section-left">Here are some of my projects made with the technologies im familiar with and have been hosted online by me</p>
         <a class="link primary-link"href="/projects.html">Browse Projects</a>
@@ -45,21 +45,23 @@
         <p class="section-left">My love for Reading goes hand in hand with my love for Writing, you can take a look at some of my blogs below</p>
         <a class="link secondary-link"href="/blogs.html">View Blogs</a>
     </section>
+
+    <hr>
     
     
     <footer class="footer">
         <div>Connect With Me</div>
         <ul class="socials non-bullet">
-            <li class="list-inline"><a class="link" href="/"><img alt="GitHub" src="images/GitHub.svg"
+            <li class="list-inline"><a class="link" href="https://github.com/7suyash7"><img alt="GitHub" src="images/GitHub.svg"
                 width="100" height="50" >
             </a></li>
-        <li class="list-inline"><a class="link" href="/"><img alt="Twitter" src="images/twitter.svg"
+        <li class="list-inline"><a class="link" href="https://twitter.com/suyyyashh"><img alt="Twitter" src="images/twitter.svg"
             width="100" height="50" >
         </a></li>
         <li class="list-inline"><a class="link" href="/"><img alt="LinkedIn" src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Logo.svg.original.svg"
             width="100" height="50">
         </a></li>
-        <li class="list-inline"><a class="link" href="/"><img alt="Instagram" src="images/instagram.svg"
+        <li class="list-inline"><a class="link" href="https://www.instagram.com/7suyash7"><img alt="Instagram" src="images/instagram.svg"
             width="100" height="50" >
         </a></li>
         </ul>
