--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
         <h1 class="hero-heading">About Me and My Work</h1>
         </header>
         <section class="ow">
-     <h3>Technologies</h3>
-     <p class="section-left">I am familiar with HTML5, CSS3, Git, JavaScrip, NodeJS, ReactJS and Web Hosting</p>
+     <h1>Technologies</h1>
+     <h3 class="section-left">I am familiar with HTML5, CSS3, Git, JavaScrip, NodeJS, ReactJS and Web Hosting</h3>
     </section>
 <hr>
     <section class="ow">
-        <h3>Projects</h3>
-        <p class="section-left">Here are some of my projects made with the technologies im familiar with and have been hosted online by me</p>
+        <h1>Projects</h1>
+        <h3 class="section-left">Here are some of my projects made with the technologies I'am familiar with and have been hosted online by me</h3>
         <a class="link primary-link"href="/projects.html">Browse Projects</a>
 </section>
 <hr>
     <section class="ow">
-        <h3>Blogs</h3>
-        <p class="section-left">My love for Reading goes hand in hand with my love for Writing, you can take a look at some of my blogs below</p>
+        <h1>Blogs</h1>
+         <h3 class="section-left">My love for Reading goes hand in hand with my love for writing, you can take a look at some of my blogs below</h3>
         <a class="link secondary-link"href="/blogs.html">View Blogs</a>
     </section>
 
@@ -49,7 +49,7 @@
     
     
     <footer class="footer">
-        <div>Connect With Me</div>
+        <h3 class="div">Connect With Me</h3>
         <ul class="socials non-bullet">
             <li class="list-inline"><a class="link" href="https://github.com/7suyash7"><img alt="GitHub" src="images/GitHub.svg"
                 width="100" height="50" >
