--- a/lib/components.html
+++ b/lib/components.html
@@ -9,7 +9,7 @@
     <link href="/styles.css" rel="stylesheet" />
 
 </head>
-<body>
+<body id> 
     <h1 id="lib-header">Welcome to my Component Library.</h1>
     <p>Im making a website to showcase my projects made with the help of CSS, HTML, JAVA, NODE.js, etc
     </p>
