--- a/blogs.html
+++ b/blogs.html
@@ -56,7 +56,7 @@
 
 
         <footer class="footer">
-            <div>Connect With Me</div>
+            <h3 class="div">Connect With Me</h3>
             <ul class="socials non-bullet">
                 <li class="list-inline"><a class="link" href="https://github.com/7suyash7"><img alt="GitHub" src="images/GitHub.svg"
                     width="100" height="50" >
