lucky birthday project

--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,15 @@
                         <a class="link secondary-link" href="https://github.com/7suyash7/Cash-Register">View Source Code</a>
                         </section>
     
-
+                        <section>
+        
+                            <ol class="non-bullet">
+                            <li><h3 class="project-h3">8. Is your Birthday Lucky?</h3></li></ol></html>
+                                <section class="ow">
+                                    <h3>An app made with the help of JavaScript, which tells you if your Birthday is lucky or not!!</h3>
+                                <a class="link primary-link" href="https://isyourbirthday-lucky.netlify.app/">Play Game</a>   
+                                <a class="link secondary-link" href="https://github.com/7suyash7/lucky-birthday">View Source Code</a>
+                                </section>        
 
 
 
