--- a/projects.html
+++ b/projects.html
@@ -167,6 +167,22 @@
                                 Code</a>
                         </section>
 
+                        <section>
+
+                            <ol class="non-bullet">
+                                <li>
+                                    <h3 class="project-h3">10. Is your Birthday a Palindrome?!!</h3>
+                                </li>
+                            </ol>
+    
+                            </html>
+                            <section class="ow">
+                                <h3>An app made with the help of vanillaJS which tells you whether your birthday is a Palindrome or not!</h3>
+                                <a class="link primary-link" href="https://bdaypalindrome-suyash.netlify.app/">Play Game</a>
+                                <a class="link secondary-link" href="https://github.com/7suyash7/palindrome-birthday">View Source
+                                    Code</a>
+                            </section>    
+
 
 
 
