--- a/projects.html
+++ b/projects.html
@@ -40,25 +40,25 @@
         <section class="ow">
             <h3>A CLI app built with <strong>NodeJS</strong>. You can send this to your friends and find out who really
                 knows you the best.</h3>
-            <a class="link primary-link" href="https://replit.com/@7suyash7/BEGINNER-2#index.js">Play Game</a>
+            <a class="link primary-link" href="https://replit.com/@7suyash7/BEGINNER-2#index.js">View Project</a>
             <a class="link secondary-link" href="https://replit.com/@7suyash7/BEGINNER-2#index.js">View Source Code</a>
         </section>
 
-        <ol class="non-bullet">
+        <ol class="non-bullet" reversed>
             <li>
                 <h3 class="project-h3">2. BigBang Theory Trivia Quiz
             </li>
         </ol>
-</body>
+
 </h3>
 <section class="ow">
     <h3>Another CLI built with NojeJS. Send this to your friends and test their knowledge about the popular TV show The
         BigBang Theory</h3>
-    <a class="link primary-link" href="https://replit.com/@7suyash7/BigBangTheoryTVshow-quiz#index.js">Play Game</a>
+    <a class="link primary-link" href="https://replit.com/@7suyash7/BigBangTheoryTVshow-quiz#index.js">View Project</a>
     <a class="link secondary-link" href="https://replit.com/@7suyash7/BigBangTheoryTVshow-quiz#index.js">View Source
         Code</a>
 </section>
-<ol class="non-bullet">
+<ol class="non-bullet" reversed>
     <li>
         <h3 class="project-h3">3.Banana Translate Game</h3>
     </li>
@@ -68,12 +68,12 @@
 <section class="ow">
     <h3>A Fun Translator app which translates English to Banana language made with the help of VanillaJS and an API.
     </h3>
-    <a class="link primary-link" href="https://bananagang-translate.netlify.app/">Play Game</a>
-    <a class="link secondary-link" href="https://github.com/7suyash7/banana-translate-game/tree/main">View Source
+    <a class="link primary-link" href="https://bananagang-translate.netlify.app/">View Project</a>
+    <a class="link secondary-link" href="https://github.com/7suyash7/banana-translate-game">View Source
         Code</a>
 </section>
 <section>
-    <ol class="non-bullet">
+    <ol class="non-bullet" reversed>
         <li>
             <h3 class="project-h3">4.StarWars Translate Game</h3>
         </li>
@@ -83,13 +83,13 @@
     <section class="ow">
         <h3>A Fun Translator app which translates English to Vulcan language made with the help of VanillaJS and an API.
         </h3>
-        <a class="link primary-link" href="https://starwars-translate-game.netlify.app/">Play Game</a>
-        <a class="link secondary-link" href="https://github.com/7suyash7/StarWars-Translate-Game/tree/main">View Source
+        <a class="link primary-link" href="https://starwars-translate-game.netlify.app/">View Project</a>
+        <a class="link secondary-link" href="https://github.com/7suyash7/StarWars-Translate-Game">View Source
             Code</a>
     </section>
     <section>
 
-        <ol class="non-bullet">
+        <ol class="non-bullet" reversed>
             <li>
                 <h3 class="project-h3">5. Animal Emoji Interpreter App</h3>
             </li>
@@ -99,14 +99,14 @@
         <section class="ow">
             <h3>An app made with the help of ReactJS, which lets you know the meaning of an emoji when you click on it
             </h3>
-            <a class="link primary-link" href="https://xn5li.csb.app/">Play Game</a>
+            <a class="link primary-link" href="https://xn5li.csb.app/">View Project</a>
             <a class="link secondary-link" href="https://github.com/7suyash7/Animal-Emoji-Interpreter">View Source
                 Code</a>
         </section>
 
         <section>
 
-            <ol class="non-bullet">
+            <ol class="non-bullet" reversed>
                 <li>
                     <h3 class="project-h3">6. Book Recommendation App</h3>
                 </li>
@@ -116,12 +116,12 @@
             <section class="ow">
                 <h3>An app made with the help of ReactJS, which gives you an instant recommendation based on your
                     selection of the genre</h3>
-                <a class="link primary-link" href="https://0xecb.csb.app/">Play Game</a>
-                <a class="link secondary-link" href="">View Source Code</a>
+                <a class="link primary-link" href="https://0xecb.csb.app/">View Project</a>
+                <a class="link secondary-link" href="https://github.com/7suyash7/Book-Recommendation-App">View Source Code</a>
             </section>
             <section>
 
-                <ol class="non-bullet">
+                <ol class="non-bullet" reversed>
                     <li>
                         <h3 class="project-h3">7. Cash Register Manager</h3>
                     </li>
@@ -131,13 +131,13 @@
                 <section class="ow">
                     <h3>An app made with the help of vanillaJS, which will tell you the exact change to be returned to
                         a customer.</h3>
-                    <a class="link primary-link" href="https://cash-registermanager.netlify.app/">Play Game</a>
+                    <a class="link primary-link" href="https://cash-registermanager.netlify.app/">View Project</a>
                     <a class="link secondary-link" href="https://github.com/7suyash7/Cash-Register">View Source Code</a>
                 </section>
 
                 <section>
 
-                    <ol class="non-bullet">
+                    <ol class="non-bullet" reversed>
                         <li>
                             <h3 class="project-h3">8. Is your Birthday Lucky?</h3>
                         </li>
@@ -147,13 +147,13 @@
                     <section class="ow">
                         <h3>An app made with the help of vanillaJS, which tells you if your Birthday is lucky or not!!
                         </h3>
-                        <a class="link primary-link" href="https://isyourbirthday-lucky.netlify.app/">Play Game</a>
+                        <a class="link primary-link" href="https://isyourbirthday-lucky.netlify.app/">View Project</a>
                         <a class="link secondary-link" href="https://github.com/7suyash7/lucky-birthday">View Source
                             Code</a>
                     </section>
                     <section>
 
-                        <ol class="non-bullet">
+                        <ol class="non-bullet" reversed>
                             <li>
                                 <h3 class="project-h3">9. Fun with Triangles!!</h3>
                             </li>
@@ -162,14 +162,14 @@
                         </html>
                         <section class="ow">
                             <h3>An app made with the help of vanillaJS which has various games and quizes about Triangles!</h3>
-                            <a class="link primary-link" href="https://funwithtri-angles.netlify.app/">Play Game</a>
+                            <a class="link primary-link" href="https://funwithtri-angles.netlify.app/">View Project</a>
                             <a class="link secondary-link" href="https://github.com/7suyash7/triangles-project">View Source
                                 Code</a>
                         </section>
 
                         <section>
 
-                            <ol class="non-bullet">
+                            <ol class="non-bullet" reversed>
                                 <li>
                                     <h3 class="project-h3">10. Is your Birthday a Palindrome?!!</h3>
                                 </li>
@@ -178,12 +178,26 @@
                             </html>
                             <section class="ow">
                                 <h3>An app made with the help of vanillaJS which tells you whether your birthday is a Palindrome or not!</h3>
-                                <a class="link primary-link" href="https://bdaypalindrome-suyash.netlify.app/">Play Game</a>
+                                <a class="link primary-link" href="https://bdaypalindrome-suyash.netlify.app/">View Project</a>
                                 <a class="link secondary-link" href="https://github.com/7suyash7/palindrome-birthday">View Source
                                     Code</a>
                             </section>    
 
+                            <section>
 
+                                <ol class="non-bullet" reversed>
+                                    <li>
+                                        <h3 class="project-h3">11. Stonks!!</h3>
+                                    </li>
+                                </ol>
+        
+                                </html>
+                                <section class="ow">
+                                    <h3>An app made with the help of vanillaJS which tells you how your stocks are doing!</h3>
+                                    <a class="link primary-link" href="https://stonkss-app.netlify.app/">View Project</a>
+                                    <a class="link secondary-link" href="https://github.com/7suyash7/stocks-app">View Source
+                                        Code</a>
+                                </section>  
 
 
                         <hr>
