--- a/projects.html
+++ b/projects.html
@@ -99,7 +99,7 @@
         <section class="ow">
             <h3>An app made with the help of ReactJS, which lets you know the meaning of an emoji when you click on it
             </h3>
-            <a class="link primary-link" href="https://xn5li.csb.app/">View Project</a>
+            <a class="link primary-link" href="https://xcypi.csb.app/">View Project</a>
             <a class="link secondary-link" href="https://github.com/7suyash7/Animal-Emoji-Interpreter">View Source
                 Code</a>
         </section>
