--- a/projects.html
+++ b/projects.html
@@ -38,9 +38,8 @@
         </li>
         </h3>
         <section class="ow">
-            <h3>A CLI app built with <strong>NodeJS</strong>. You can send this to your friends and find out who really
-                knows you the best.</h3>
-            <a class="link primary-link" href="https://replit.com/@7suyash7/BEGINNER-2#index.js">View Project</a>
+            <h3>My first project and the most basic one which lets you know a bit about me!!</h3>
+            <a class="link primary-link" href="https://replit.com/@7suyash7/BEGINNER-3?v=1">View Project</a>
             <a class="link secondary-link" href="https://replit.com/@7suyash7/BEGINNER-2#index.js">View Source Code</a>
         </section>
 
