--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
 
     <ol class="non-bullet" reversed>
         <li>
-            <h3 class="project-h3">1. How Well Do You Know Me?
+            <h3 class="project-h3">How Well Do You Know Me?
         </li>
         </h3>
         <section class="ow">
@@ -45,7 +45,7 @@
 
         <ol class="non-bullet" reversed>
             <li>
-                <h3 class="project-h3">2. BigBang Theory Trivia Quiz
+                <h3 class="project-h3">BigBang Theory Trivia Quiz
             </li>
         </ol>
 
@@ -53,13 +53,13 @@
 <section class="ow">
     <h3>Another CLI built with NojeJS. Send this to your friends and test their knowledge about the popular TV show The
         BigBang Theory</h3>
-    <a class="link primary-link" href="https://replit.com/@7suyash7/BigBangTheoryTVshow-quiz#index.js">View Project</a>
+    <a class="link primary-link" href="https://replit.com/@7suyash7/BigBangTheoryTVshow-quiz?v=1">View Project</a>
     <a class="link secondary-link" href="https://replit.com/@7suyash7/BigBangTheoryTVshow-quiz#index.js">View Source
         Code</a>
 </section>
 <ol class="non-bullet" reversed>
     <li>
-        <h3 class="project-h3">3.Banana Translate Game</h3>
+        <h3 class="project-h3">Banana Translate Game</h3>
     </li>
 </ol>
 
@@ -74,7 +74,7 @@
 <section>
     <ol class="non-bullet" reversed>
         <li>
-            <h3 class="project-h3">4.StarWars Translate Game</h3>
+            <h3 class="project-h3">StarWars Translate Game</h3>
         </li>
     </ol>
 
@@ -90,7 +90,7 @@
 
         <ol class="non-bullet" reversed>
             <li>
-                <h3 class="project-h3">5. Animal Emoji Interpreter App</h3>
+                <h3 class="project-h3">Animal Emoji Interpreter App</h3>
             </li>
         </ol>
 
@@ -107,7 +107,7 @@
 
             <ol class="non-bullet" reversed>
                 <li>
-                    <h3 class="project-h3">6. Book Recommendation App</h3>
+                    <h3 class="project-h3">Book Recommendation App</h3>
                 </li>
             </ol>
 
@@ -122,7 +122,7 @@
 
                 <ol class="non-bullet" reversed>
                     <li>
-                        <h3 class="project-h3">7. Cash Register Manager</h3>
+                        <h3 class="project-h3">Cash Register Manager</h3>
                     </li>
                 </ol>
 
@@ -138,7 +138,7 @@
 
                     <ol class="non-bullet" reversed>
                         <li>
-                            <h3 class="project-h3">8. Is your Birthday Lucky?</h3>
+                            <h3 class="project-h3">Is your Birthday Lucky?</h3>
                         </li>
                     </ol>
 
@@ -154,7 +154,7 @@
 
                         <ol class="non-bullet" reversed>
                             <li>
-                                <h3 class="project-h3">9. Fun with Triangles!!</h3>
+                                <h3 class="project-h3">Fun with Triangles!!</h3>
                             </li>
                         </ol>
 
@@ -170,7 +170,7 @@
 
                             <ol class="non-bullet" reversed>
                                 <li>
-                                    <h3 class="project-h3">10. Is your Birthday a Palindrome?!!</h3>
+                                    <h3 class="project-h3">Is your Birthday a Palindrome?!!</h3>
                                 </li>
                             </ol>
     
@@ -186,7 +186,7 @@
 
                                 <ol class="non-bullet" reversed>
                                     <li>
-                                        <h3 class="project-h3">11. Stonks!!</h3>
+                                        <h3 class="project-h3">Stonks!!</h3>
                                     </li>
                                 </ol>
         
