--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    profile="https://suyash-nayan.netlify.app/">
+<head profile="https://suyash-nayan.netlify.app/">
 <link rel="icon" 
       type="image/ico" 
       href="/images/favicon.ico" />
