--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head profile="https://suyash-nayan.netlify.app/">
-<link rel="icon" 
-      type="image/ico" 
-      href="/images/favicon.ico" />
-
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
