--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
             <li class="list-inline"><a class="link" href="https://github.com/7suyash7"><img alt="GitHub" src="images/GitHub.svg"
                 width="100" height="50" >
             </a></li>
-        <li class="list-inline"><a class="link" href="https://twitter.com/suyyyashh"><img alt="Twitter" src="images/twitter.svg"
-            width="100" height="50" >
+        <li class="list-inline"><a class="link" href="https://twitter.com/suyash_nayan"><img alt="Twitter" src="images/twitter.svg"
+            width="50" height="40" >
         </a></li>
         <li class="list-inline"><a class="link" href="/"><img alt="LinkedIn" src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Logo.svg.original.svg"
             width="100" height="50">
         </a></li>
         <li class="list-inline"><a class="link" href="https://www.instagram.com/7suyash7"><img alt="Instagram" src="images/instagram.svg"
-            width="100" height="50" >
+            width="80" height="50" >
         </a></li>
         </ul>
        </footer>
