--- a/projects.html
+++ b/projects.html
@@ -43,10 +43,10 @@
 </html>
 <section class="ow">
     <h3>An app made with pure VanillaJS which lets you track your Personal Expenses</h3>
-    <a class="link primary-link" href="https://stonkss-app.netlify.app/">View Project</a>
-    <a class="link secondary-link" href="https://github.com/7suyash7/stocks-app">View Source
-        Code</a>
-</section>
+    <a class="link primary-link" href="https://personal-expenses.netlify.app/">View Project</a>
+    <a clas</a>
+</section>s="link secondary-link" href="https://github.com/7suyash7/expense-app">View Source
+        Code
 
 
     <section>
@@ -201,7 +201,7 @@
                                 href="https://github.com/7suyash7/StarWars-Translate-Game">View Source
                                 Code</a>
                         </section>
-
+                        <section>
                         <ol class="non-bullet" reversed>
                             <li>
                                 <h3 class="project-h3">How Well Do You Know Me?
@@ -233,12 +233,6 @@
                                     Code</a>
 
                             </section>
-
-
-
-
-
-
 
                             <hr>
                             <footer class="footer">
