--- a/projects.html
+++ b/projects.html
@@ -44,9 +44,9 @@
 <section class="ow">
     <h3>An app made with pure VanillaJS which lets you track your Personal Expenses</h3>
     <a class="link primary-link" href="https://personal-expenses.netlify.app/">View Project</a>
-    <a clas</a>
-</section>s="link secondary-link" href="https://github.com/7suyash7/expense-app">View Source
-        Code
+    <a class="link secondary-link" href="https://github.com/7suyash7/expense-app">View Source
+        Code</a>
+</section>
 
 
     <section>
