--- a/blogs.html
+++ b/blogs.html
@@ -32,8 +32,8 @@
     <ol class="non-bullet"reversed>
         <li style="color: gray">Blog 1</li>
         <section class="ow">
-            <p>A small text about your blog</p>
-        <a class="link" href="/">Read More</a>
+            <p>A guide for absolute beginners on how to get started with their programming journey!</p>
+        <a class="link" href="https://suyashblogs.hashnode.dev/setup-guide-for-beginners">Read More</a>
            </section>
         <li style="color: gray;">Blog 2</li>
         <section class="ow">
@@ -47,15 +47,7 @@
                </section>
         </li>
         <hr>
-
-
-
-
-
-
-
-
-        <footer class="footer">
+<footer class="footer">
             <h3 class="div">Connect With Me</h3>
             <ul class="socials non-bullet">
                 <li class="list-inline"><a class="link" href="https://github.com/7suyash7"><img alt="GitHub" src="images/GitHub.svg"
@@ -74,14 +66,5 @@
             
            </footer>
 
-
-
-
-
-
-
-
-    Will be updated soon!
-    
 </body>
 </html>
