--- a/blogs.html
+++ b/blogs.html
@@ -23,29 +23,32 @@
       </ul>
       </nav>
 
-
+<ol class="non-bullet">
       <h3>Blog Library</h3>
       <header class="hero">
         <img class="hero-img" src="images/blogs-image.svg" />
         <h1 class="hero-heading">My Blogs</h1>
         </header>
+</ol>
     <ol class="non-bullet"reversed>
-        <li style="color: gray">Blog 1</li>
+        <li class="project-heading"></li>
         <section class="ow">
             <p>A guide for absolute beginners on how to get started with their programming journey!</p>
         <a class="link" href="https://suyashblogs.hashnode.dev/setup-guide-for-beginners">Read More</a>
            </section>
-        <li style="color: gray;">Blog 2</li>
+          
+        <li class="project-heading"></li>
         <section class="ow">
-            <p>A small text about your blog</p>
-        <a class="link" href="/">Read More</a>
+            <p>A guide to help you choose between var, let and const when defining a variable in JavaScript</p>
+        <a class="link" href="https://suyashblogs.hashnode.dev/var-const-and-let-in-javascript">Read More</a>
            </section>
-        <li style="color: gray;">Blog 3</li>
+        <li class="project-heading"></li>
             <section class="ow">
                 <p>A small text about your blog</p>
                 <a class="link" href="/">Read More</a>
                </section>
         </li>
+       
         <hr>
 <footer class="footer">
             <h3 class="div">Connect With Me</h3>
