--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <hr>
     <section class="ow">
         <h1>Projects</h1>
-        <h3 class="section-left">Here are some of my projects made with the technologies I'am familiar with and have been hosted online by me</h3>
+        <h3 class="section-left">Here are some of my projects made with the technologies I'm familiar with and have been hosted online by me</h3>
         <a class="link primary-link"href="/projects.html">Browse Projects</a>
 </section>
 <hr>
