--- a/projects.html
+++ b/projects.html
@@ -243,7 +243,7 @@
                                     <li class="list-inline"><a class="link" href="https://twitter.com/suyash_nayan"><img
                                                 alt="Twitter" src="images/twitter.svg" width="50" height="40">
                                         </a></li>
-                                    <li class="list-inline"><a class="link" href="/"><img alt="LinkedIn"
+                                    <li class="list-inline"><a class="link" href="https://www.linkedin.com/in/suyash-nayan-a40970198/"><img alt="LinkedIn"
                                                 src="https://content.linkedin.com/content/dam/me/business/en-us/amp/brand-site/v2/bg/LI-Logo.svg.original.svg"
                                                 width="100" height="50">
                                         </a></li>
