spelling mistake fix

--- a/projects.html
+++ b/projects.html
@@ -222,7 +222,7 @@
 
                             </h3>
                             <section class="ow">
-                                <h3>Another CLI built with NojeJS. Send this to your friends and test their knowledge
+                                <h3>Another CLI built with Node.JS. Send this to your friends and test their knowledge
                                     about the popular TV show The
                                     BigBang Theory</h3>
                                 <a class="link primary-link"
