added notes app, fixed a typo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </header>
         <section class="ow">
      <h1>Technologies</h1>
-     <h3 class="section-left">I am familiar with HTML5, CSS3, Git, JavaScrip, NodeJS, ReactJS and Web Hosting</h3>
+     <h3 class="section-left">I am familiar with HTML5, CSS3, Git, JavaScript, NodeJS, ReactJS and Web Hosting</h3>
     </section>
 <hr>
     <section class="ow">
