--- a/blogs.html
+++ b/blogs.html
@@ -33,6 +33,12 @@
     <ol class="non-bullet"reversed>
         <li class="project-heading"></li>
         <section class="ow">
+            <p>My First Internship Experience and all of the stuff I learnt during it!!</p>
+        <a class="link" href="https://suyashblogs.hashnode.dev/first-internship-experience">Read More</a>
+            </section> 
+        <li class="project-heading"></li>
+    
+        <section class="ow">
             <p>A guide for absolute beginners on how to get started with their programming journey!</p>
         <a class="link" href="https://suyashblogs.hashnode.dev/setup-guide-for-beginners">Read More</a>
            </section>
@@ -42,6 +48,7 @@
             <p>A guide to help you choose between var, let and const when defining a variable in JavaScript</p>
         <a class="link" href="https://suyashblogs.hashnode.dev/var-const-and-let-in-javascript">Read More</a>
            </section>
+          
         <hr>
 <footer class="footer">
             <h3 class="div">Connect With Me</h3>
