--- a/blogs.html
+++ b/blogs.html
@@ -37,7 +37,19 @@
         <a class="link" href="https://suyashblogs.hashnode.dev/first-internship-experience">Read More</a>
             </section> 
         <li class="project-heading"></li>
-    
+        
+        <section class="ow">
+            <p> I have been experimenting with Next.js 12 recently, get upto speed about what it is here 👇</p>
+        <a class="link" href="https://suyashblogs.hashnode.dev/nextjs-12-features">Read More</a>
+            </section> 
+        <li class="project-heading"></li>
+
+        <section class="ow">
+            <p>GitHub might be easy, GitLab is tough. Here is a quick guide on how to get started with GitLab</p>
+        <a class="link" href="https://suyashblogs.hashnode.dev/gitlab">Read More</a>
+            </section> 
+        <li class="project-heading"></li>
+
         <section class="ow">
             <p>A guide for absolute beginners on how to get started with their programming journey!</p>
         <a class="link" href="https://suyashblogs.hashnode.dev/setup-guide-for-beginners">Read More</a>
