updated header page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </header>
         <section class="ow">
      <h1>Technologies</h1>
-     <h3 class="section-left">I am familiar with HTML5, CSS3, Git, GitLab, BitBucket, JavaScript, jQuery, NodeJS, ReactJS, Java, MongoDB, OAuth2, BootStrap, Material-UI, Tailwind.</h3>
+     <h3 class="section-left">I am familiar with HTML5, CSS3, JavaScript, jQuery, NodeJS, ReactJS, Java, MongoDB, OAuth2, Solidity, Smart Contracts, Git, GitLab, BitBucket, BootStrap, Material-UI, Tailwind.</h3>
     </section>
 <hr>
     <section class="ow">
